--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ html {
 
 .navbar-brand {
   font-weight: 600;
+  letter-spacing: 3.5px;
 }
 
 .navbar-logo {
@@ -148,7 +149,7 @@ html {
 .sticky {
   background-color: var(--stickyNav-color);
   border-radius: 200px;
-  margin: 12px 500px 0px 500px;
+  margin: 12px 420px 0px 420px;
 }
 
 header {
@@ -163,7 +164,7 @@ header {
 
 main {
   width: 100%;
-  height: 3350px;
+  height: 3800px;
   background-color: #ffffff;
 }
 
@@ -240,6 +241,7 @@ main {
   font-weight: bolder;
   font-size: 65px;
   color: var(--Black-text-color);
+  letter-spacing: 4px;
 }
 
 .intro-text p {
@@ -247,6 +249,7 @@ main {
   font-size: 20px;
   color: var(--Black-text-color);
   font-weight: 600;
+  letter-spacing: 2px;
 }
 
 /* grid ↓ */
@@ -415,7 +418,7 @@ main {
 
 .card-cart {
   background-color: transparent;
-  width: 1300px;
+  width: 1450px;
   height: 800px;
 }
 
@@ -423,26 +426,22 @@ main {
   color: var(--White-text-color);
   font-weight: 600;
   font-size: 30px;
-  margin: 30px 0px 30px 60px;
+  margin: 30px 0px 30px 0px;
+  letter-spacing: 3px;
 }
 
 .card-cart-title p {
   color: var(--White-text-color);
   font-weight: 500;
   font-size: 18px;
-  margin: 0px 0px 0px 60px;
+  letter-spacing: 2px;
 }
 
 .item-section {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#mid {
-  background-color: #fefae0;
-  margin-left: 80px;
-  margin-right: 80px;
+  gap: 40px;
 }
 
 .description {
@@ -465,8 +464,9 @@ main {
 .promo h2 {
   color: var(--Black-text-color);
   font-weight: 600;
-  font-size: 25px;
+  font-size: 22px;
   text-align: left;
+  letter-spacing: 3px;
 }
 
 .promo p {
@@ -477,6 +477,7 @@ main {
   font-weight: 500;
   text-align: left;
   margin: 20px 0px 20px 0px;
+  letter-spacing: 3px;
 }
 
 .cart-btn {
@@ -488,7 +489,7 @@ main {
   color: white;
   font-size: 20px;
   font-weight: 600;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
 }
 
 .cart-img {
