--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ main {
 }
 
 .intro-text p {
-  margin-top: 10px;
+  margin: 30px 0px 30px 0px;
   letter-spacing: 3px;
   font-size: 17px;
   font-weight: 500;
@@ -318,7 +318,145 @@ main {
 
 .schedule-container {
   width: 100%;
-  height: 950px;
+  height: 1050px;
+  background-color: #fefae0;
+}
+
+.schedule-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.schedule-title {
+  width: fit-content;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.schedule-title h2 {
+  font-size: 2.3em;
+  font-weight: 600;
+  letter-spacing: 5px;
+}
+
+.schedule-item-group {
+  width: 1444px;
+  height: 844px;
+  display: grid;
+  grid-template-columns: 700px 30px 4px 30px 700px;
+  grid-template-rows: 400px 30px 4px 30px 400px;
+}
+
+.schedule-item-group h3 {
+  writing-mode: vertical-rl;
+  font-size: 2em;
+  font-weight: 600;
+  letter-spacing: 4px;
+}
+
+.schedule-item-group ul {
+  margin-left: 50px;
+}
+
+.schedule-item-group li {
+  padding: 15px;
+  margin: 30px 0px 30px 0px;
+  list-style: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.schedule-item-group li:hover {
+  transform: translate(0, -10px);
+  transition: 0.3s ease;
+  box-shadow: rgba(255, 182, 98, 0.651) 0px 15px 29px 0px;
+}
+
+.schedule-item-group a:hover {
+  text-decoration: none;
+}
+
+.schedule-item-group p {
+  font-size: 16px;
+  letter-spacing: 3px;
+  margin: 0;
+  padding: 0px 20px 0px 20px;
+  color: var(--White-text-color);
+}
+
+.schedule-item-1,
+.schedule-item-2,
+.schedule-item-3,
+.schedule-item-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+}
+
+.schedule-item-1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  background-color: #fefae0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.schedule-item-1 li {
+  background-color: #e69827;
+}
+
+.schedule-item-2 {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  background-color: #fefae0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.schedule-item-2 li {
+  background-color: #e4bb29;
+}
+
+.D-line-1 {
+  grid-column: 3/4;
+  grid-row: 1/6;
+  background-color: rgba(161, 161, 161);
+  border-radius: 10px;
+}
+
+.D-line-2 {
+  grid-column: 1/6;
+  grid-row: 3/4;
+  background-color: rgba(161, 161, 161);
+  border-radius: 10px;
+}
+
+.schedule-item-3 {
+  grid-column: 1/2;
+  grid-row: 5/6;
+  background-color: #fefae0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.schedule-item-3 li {
+  background-color: #e47d29;
+}
+
+.schedule-item-4 {
+  grid-column: 5/6;
+  grid-row: 5/6;
+  background-color: #fefae0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.schedule-item-4 li {
+  background-color: #e4a029;
 }
 
 /* Bento grid */
@@ -687,7 +825,7 @@ footer {
   justify-content: center;
 }
 
-.d-line {
+.D-line-3 {
   width: 77%;
   height: 4px;
   border-radius: 100px;
